--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <body>
   <h1>Catalogo Best Seller - Linea AMAZONAS</h1>
 
+  <!-- Inizio prodotti -->
   <div class="prodotto">
     <img src="https://anto161062.github.io/catalogo/assets/img/amazonas/acai.jpg" alt="Acai">
     <div class="info">
@@ -75,13 +76,25 @@
       <p class="prezzo">€14,60 – 80g</p>
       <p>Superfood molto richiesto per l'effetto antiossidante e detox.</p>
       <div class="azioni">
-        <a href="https://wa.me/393717771328?text=Ciao%2C%20vorrei%20ordinare%20Acai%20in%20polvere%20dal%20catalogo%20Amazonas." target="_blank">Ordina via WhatsApp</a>
-        <a href="https://forms.gle/123456789Amazonas" target="_blank">Ordina tramite Modulo</a>
+        <a href="https://wa.me/393717771328?text=Vorrei%20ordinare%20Acai%20in%20polvere%20puro">Ordina via WhatsApp</a>
       </div>
     </div>
   </div>
 
-  <!-- Altri prodotti simili da aggiungere qui -->
+  <div class="prodotto">
+    <img src="https://anto161062.github.io/catalogo/assets/img/amazonas/acerola.jpg" alt="Acerola">
+    <div class="info">
+      <h2>Acerola Bio 30% Vitamina C pura</h2>
+      <p class="categoria">Frutti Superfood</p>
+      <p class="prezzo">€24,50 – 100g</p>
+      <p>Vitamina C naturale bio, molto usata in inverno e nei mix immunitari.</p>
+      <div class="azioni">
+        <a href="https://wa.me/393717771328?text=Vorrei%20ordinare%20Acerola%2030%%20Vitamina%20C">Ordina via WhatsApp</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Altri 8 prodotti da completare -->
 
   <footer>
     Per info o ordini: WhatsApp 371 7771328 – 
